--- a/my-website/package.json
+++ b/my-website/package.json
@@ -11,10 +11,13 @@
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
-    "write-heading-ids": "docusaurus write-heading-ids"
+    "write-heading-ids": "docusaurus write-heading-ids",
+    "prebuild": "npm run clear",
+    "postbuild": "echo Build completed successfully"
   },
   "dependencies": {
     "@docusaurus/core": "3.9.2",
+    "@docusaurus/faster": "^3.9.2",
     "@docusaurus/preset-classic": "3.9.2",
     "@mdx-js/react": "^3.0.0",
     "clsx": "^2.0.0",
@@ -39,6 +42,6 @@
     ]
   },
   "engines": {
-    "node": ">=20.0"
+    "node": "24.x"
   }
 }
